# cosmo-store-rs

./: Cargo.toml  README.md
cosmo_store/: .gitignore  Cargo.toml
cosmo_store/src/: lib.rs
cosmo_store/src/common/: i64_event_version.rs  mod.rs  u32_event_version.rs
cosmo_store/src/traits/: command_store.rs  event_store.rs  mod.rs  version.rs
cosmo_store/src/types/: command_write.rs  event_read.rs  event_read_range.rs  event_stream.rs  event_write.rs  expected_version.rs  mod.rs  stream_read_filter.rs
cosmo_store_in_memory/: Cargo.toml
cosmo_store_in_memory/src/: db_types.rs  event_store.rs  event_version.rs  lib.rs
cosmo_store_in_memory/tests/: event_store_test.rs
cosmo_store_sqlx/: Cargo.toml
cosmo_store_sqlx/src/: event_store.rs  event_version.rs  lib.rs
cosmo_store_sqlx_postgres/: Cargo.toml
cosmo_store_sqlx_postgres/src/: command_store.rs  command_store_sqlx_postgres.rs  db_types.rs  event_store.rs  event_store_sqlx_postgres.rs  event_version.rs  lib.rs
cosmo_store_sqlx_postgres/tests/: command_store_test.rs  event_store_test.rs
cosmo_store_sqlx_sqlite/: Cargo.toml
cosmo_store_sqlx_sqlite/src/: command_store.rs  command_store_sqlx_sqlite.rs  event_store.rs  event_store_sqlx_sqlite.rs  lib.rs
cosmo_store_sqlx_sqlite/tests/: command_store_test.rs  event_store_test.rs
cosmo_store_tests/: Cargo.toml
cosmo_store_tests/src/: event_generator.rs  event_store_basic_tests.rs  lib.rs
cosmo_store_util/: Cargo.toml
cosmo_store_util/src/: aggregate.rs  lib.rs
cosmo_store_util/tests/: persistent_aggregate_tests.rs  simple_aggregate_tests.rs
