[package]
name = "cosmo_store_in_memory"
version = "0.1.0"
authors = ["Kunjan Dalal <kunjee17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmo_store = { path = "../cosmo_store" }
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
uuid = { version = "0.8", default-features = false, features = ["serde", "v4"] }
