[package]
name = "cosmo_store_sqlx"
version = "0.1.0"
authors = ["Kunjan Dalal <kunjee17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmo_store = { path = "../cosmo_store" }
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
uuid = "0.8"
sqlx = { version = "0.4", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "json", "chrono" ] }
