[package]
name = "cosmo_store_tests"
version = "0.1.0"
authors = ["Kunjan Dalal <kunjee17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmo_store = { path = "../cosmo_store" }
uuid = { version = "0.8", default-features = false, features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
