[package]
name = "cosmo_store_tests"
version = "0.1.1"
authors = ["Kunjan Dalal <kunjee17@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmo_store = { path = "../cosmo_store" }
uuid = { version = "1", default-features = false, features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
