[package]
name = "cosmo_store_util"
version = "0.1.0"
authors = ["Kunjan Dalal <kunjee17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3"
uuid = "0.8"
anyhow="1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

cosmo_store = { path = "../cosmo_store" }

[dev-dependencies]
actix-rt = "*"
claim = "0.5.0"
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres", "uuid", "chrono", "json" ] }
cosmo_store_sqlx_postgres = { path = "../cosmo_store_sqlx_postgres" }
cosmo_store_tests = {path = "../cosmo_store_tests"}

