[package]
name = "cosmo_store_util"
version = "0.1.1"
authors = ["Kunjan Dalal <kunjee17@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
futures = "0"
uuid = "1"
anyhow="1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

cosmo_store = { path = "../cosmo_store" }

[dev-dependencies]
actix-rt = "*"
claim = "0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json" ] }
cosmo_store_sqlx_postgres = { path = "../cosmo_store_sqlx_postgres" }
cosmo_store_tests = {path = "../cosmo_store_tests"}

